# workspace

./: .gitignore  .pre-commit-config.yaml  ex.mid  guideline_control.py  guideline_prac.py  inference_monitor.py  pipeline_test.py  pyproject.toml  routines_test.py  tmp_midi.mid  tox.ini
_research1/: main.py  script.py
research1/: script.py
