[tool.poetry]
name = "dioai"
version = "0.1.0"
description = ""
authors = ["pozalabs <contact@pozalabs.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.28.1"
pydantic = "^1.10.2"
miditoolkit = "^0.1.16"
scipy = "^1.6.1"
matplotlib = "^3.6.0"
pretty_midi = "^0.2.9"
yacs = "^0.1.8"
bcrypt = "3.2.2"
dvc = {extras = ["ssh"], version = "^2.27.2"}
pandas = "^1.5.0"
boto3 = "^1.24.77"
parmap = "^1.6.0"
split-folders = "^0.5.1"
music21 = "^8.1.0"
lamb = "^0.0.1.post1"
sentry-sdk = "^1.9.8"
nltk = "^3.7"
gspread = "^5.7.2"
oauth2client = "^4.1.3"
pytest = "^7.3.1"
scikit-learn = "^1.2.2"
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
strenum = "^0.4.10"
wandb = "^0.15.2"
visual-midi = "^1.1.0"
pypianoroll = "^1.0.4"
plotly = "^5.14.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
tox = "^3.26.0"
mypy = "^0.981"


[tool.poetry.group.gpu.dependencies]
torch = "1.13.1"
tensorflow = "^2.12.0"
fairseq = "0.10.0"
transformers = "^4.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100